<resources>
    <string name="app_name">Ordstjernen</string>
    <string name="header">Årets ordstjerne</string>

    <string name="button1">B</string>
    <string name="button2">D</string>
    <string name="button3">G</string>
    <string name="button4">T</string>
    <string name="button5">L</string>
    <string name="button6">O</string>
    <string name="button7">U</string>

    <string name="tooShortWord">Ordet er for kort!</string>
    <string name="missingRedLetter">Ordet må inneholde T!</string>
    <string name="notCorrect">Ordet er feil!</string>
    <string name="correct">Riktig!</string>
    <string name="win">Du fant alle ordene! Gratulerer!</string>
    <string name="alreadyFound">Dette ordet er allerede funnet.</string>

    <string name="buttonAngre">Angre</string>
    <string name="buttonSubmit">Sjekk</string>
    <string name="buttonHint">Hint</string>
    <string name="buttonLanguage">Language</string>
    <string name="buttonShowAllHints">Fasit</string>

    <string name="displayHint">""</string>
    <string name="output">""</string>
    <string name="score">0/36</string>
    <string name="solution">Fasit</string>
</resources>