<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editTextScore"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/header"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <LinearLayout
        android:id="@+id/linearLayoutStar"
        android:layout_width="255dp"
        android:layout_height="273dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53">

        <LinearLayout
            android:id="@+id/linearLayoutLeft"
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:gravity="clip_horizontal|center_horizontal|center_vertical"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button1"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_border"
                android:text="@string/button1"
                android:textColor="#FFFFFF" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button2"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_border"
                android:text="@string/button2"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutMiddle"
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button3"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_border"
                android:text="@string/button3"
                android:textColor="#FFFFFF" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button4"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_border"
                android:backgroundTint="#800020"
                android:text="@string/button4"
                android:textColor="#FFFFFF" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button5"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_border"
                android:text="@string/button5"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutRight"
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button6"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_border"
                android:text="@string/button6"
                android:textColor="#FFFFFF" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button7"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_border"
                android:text="@string/button7"
                android:textColor="#FFFFFF" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutButtonbar"
        android:layout_width="320dp"
        android:layout_height="38dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.88">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonRegret"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:background="@drawable/button_border"
            android:fontFamily="sans-serif-light"
            android:text="@string/buttonAngre"
            android:textColor="#FFFFFF" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonHint"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_border"
            android:fontFamily="sans-serif-light"
            android:text="@string/buttonHint"
            android:textColor="#FFFFFF" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSubmit"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_border"
            android:fontFamily="sans-serif-light"
            android:text="@string/buttonSubmit"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewLetters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/output"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutStar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01999998" />

    <TextView
        android:id="@+id/feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002" />

    <TextView
        android:id="@+id/textViewHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/displayHint"
        android:textColor="#FFFFFF"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.77" />

    <TextView
        android:id="@+id/discoveredWords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="12sp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutStar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37" />

    <Button
        android:id="@+id/language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonLanguage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />
</androidx.constraintlayout.widget.ConstraintLayout>